2004 [Audio Encoder] added option to choose the preferred decoder (default order: NicAudio, FFAudioSource, DirectShow)
                     in case the preferred decoder cannot decode the input file the others will try to decode the file
2003 [One-Click] some profile adjustments
2002 [Update] added build number check so that profiles can only be installed using the correct build
2001 [MKV Demuxer] added status information to progress window
     [One-Click] fixed handling of PGS subtitles
2000 [One-Click] if the source is a MKV file and target container is MKV the subtitles will be copied
     [One-Click] if the source is a MKV file and target container is MKV the video track can be copied
                 added therefore a "Keep original track" checkbox for the video in the settings
1999 [profiles] during startup deprecated profiles will be removed
1998 [x264] invalid zones will be ignored. Bug #3233068
     [Main Window] zones button is always enabled. Bug #3243634
1997 [AutoEncode] fixed duplicate device type entries
1996 [MKV Demuxer] added mkvextract as mkv demuxer
     [Update] added mkvextract.exe and mkvinfo.exe to the file checks
     [One-Click] if the source is a MKV file the chapters will be extracted and reapplied to the output
     [One-Click] enhanced chapter and qpf file handling
     [One-Click] if the source is a MKV file the audio files can be demuxed if using FFMS indexer
1995 [MKV Muxer] added --aac-is-sbr in any case for AAC files in order to avoid a warning message
1994 [Log] added timestamp to some log items
1993 [Winamp] removed winamp encoder
1992 [AudX] removed audx encoder
1991 [Snow] removed snow encoder
1990 [MainForm] cosmetic change

Changelog 1911 --> 1989

Main changes:
[One-Click] added the FFMSIndexer so that e.g. most AVI and MKV files are now supported.
            if the FFMSIndexer is used the audio track must be encoded and cannot be muxed only.